--- a/pipelines/serving.yaml
+++ b/pipelines/serving.yaml
@@ -34,7 +34,7 @@ spec:
         maxReplicas: 3
         containers:
           - name: kserve-container
-            image: docker.io/tanmay471/demo_serve:01
+            image: docker.io/tanmay471/aicore-docker-deploy:04
             ports:
               - containerPort: 9001
                 protocol: TCP
